Replace depricated Class.newInstance()  with Class.getDeclaredConstructor().newInstance()